# coursework

./: .gitignore  CMakeLists.txt  README.md  coursework.sln
MTXtoBINconverter/: CMakeLists.txt  main.cpp
MatrVectMult/: MatrVectMult.vcxproj  MatrVectMult.vcxproj.filters  main.cpp
MatrixGenerator/: CMakeLists.txt  MatrixGenerator.cpp  MatrixGenerator.hpp  main.cpp
MatrixIO/: CMakeLists.txt  MatrixIO.c  MatrixIO.h
MatrixMatrixMult/: CMakeLists.txt  main.cpp
MatrixMult/: CMakeLists.txt  MatrixMult.cpp  MatrixMult.h  MatrixMultTwoPhases.cpp  MatrixMultTwoPhases.h
MatrixMultMKL/: CMakeLists.txt  MatrixMultMKL.c  MatrixMultMKL.h  main.cpp
MatrixMultTest/: CMakeLists.txt  main.cpp
MatrixMultTests/: CMakeLists.txt  main.cpp
MatrixTests/: CMakeLists.txt  main.cpp
MatrixUtils/: CMakeLists.txt  MatrixUtils.c  MatrixUtils.h
OtherUtils/: CMakeLists.txt  OtherUtils.cpp  OtherUtils.hpp
sample_matrices/: add2.mtx  littlemult1.mtx  littlemult2.mtx
sln/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  coursework.sln
sln/MTXtoBINconverter/: MTXtoBINconverter.vcxproj  MTXtoBINconverter.vcxproj.filters  cmake_install.cmake
sln/MatrixIO/: MatrixIO.vcxproj  MatrixIO.vcxproj.filters  cmake_install.cmake
sln/MatrixMatrixMult/: MatrixMatrixMult.vcxproj  MatrixMatrixMult.vcxproj.filters  cmake_install.cmake
testmatrices/: add1.mtx  littlematrix.mtx
