cmake_minimum_required(VERSION 3.6 FATAL_ERROR)

project(coursework)

add_subdirectory(MatrixUtils)
add_subdirectory(MatrixIO)
add_subdirectory(MatrixMult)
add_subdirectory(MTXtoBINconverter)
add_subdirectory(MatrixGenerator)
add_subdirectory(OtherUtils)
add_subdirectory(MatrixTests)
add_subdirectory(MatrixMultTest)
add_subdirectory(MatrixMultMKL)
